# PartCraft3D

./: .gitignore  PIPELINE.md  README.md  data  outputs  pyproject.toml  requirements.txt
.claude/: .nfs000000000cd93ab100003cf3  .nfs000000000cd93ae400003cf4  .nfs000000000cd93afb00002458
bench_review/: build_default_val_test_review_manifest.py  build_merged_test_review_html.py  build_zip_review.py  test_build_default_val_test_review_manifest.py  test_build_merged_test_review_html.py  test_build_zip_review.py
configs/: _phase1v2_mirror5.yaml  hybrid_streaming.yaml  local_sglang.yaml  local_vlm.yaml  partobjaverse_test.yaml  partverse.yaml  partverse_H200_shard00.yaml  partverse_H200_shard02.yaml  partverse_aibox_shard00.yaml  partverse_local.yaml  partverse_local_parallel_0328.yaml  partverse_local_parallel_0328_shard00.yaml  partverse_local_parallel_shard00.yaml  partverse_node39_shard01.yaml  partverse_node39_shard03.yaml  partverse_wm1A800_shard00.yaml  pipeline_v2_gpu01.yaml  pipeline_v2_local_symlink.yaml  pipeline_v2_mirror5.yaml  pipeline_v2_shard00.yaml  pipeline_v2_shard01.yaml  pipeline_v2_shard02.yaml  pipeline_v2_shard03.yaml  pipeline_v2_shard04.yaml  pipeline_v2_shard05.yaml  pipeline_v2_shard05_test.yaml  pipeline_v2_shard06.yaml  pipeline_v2_shard08_test.yaml  pipeline_v2_test_shard00.yaml  pipeline_v3_shard01.yaml  pipeline_v3_shard03.yaml  pipeline_v3_shard04.yaml  pipeline_v3_shard05.yaml  pipeline_v3_shard06.yaml  pipeline_v3_shard07.yaml  pipeline_v3_shard08.yaml  pipeline_v3_shard08_bench100.yaml  pipeline_v3_shard08_downstream_test.yaml  (+18 more)
(+349 files in other folders)
